Add basic Calculator web:  add delelete feature

--- a/Basic Claculator Website/index.html
+++ b/Basic Claculator Website/index.html
@@ -24,7 +24,7 @@
             <button onclick="appendOperator('-')">-</button>
             <button onclick="appendNumber('0')">0</button>
             <button onclick="clearDisplay()">C</button>
-            <!-- <button onclick="deleteLast()">DEL</button> -->
+            <button onclick="deleteLast()">DEL</button>
             <button onclick="calculate()">=</button>
         </div>
     </div>
